# XML::FeedPP Changes

2006/04/30 (0.11)
    * add method: remove_item() (thanks to JUNDU)
    * add_item() method now allows clone another item/entry instance.

2006/04/30 (0.10)
    * category() method fixed for more then one category. (thanks to vlajbert)
    * normalize() method normalizes pubDate element as well. (thanks to junichi)
    * load() method has additional arguments for XML::TreePP. (thanks to kisa)
    * source code passed perltidy.

2006/03/18 (0.08)
    * add methods: sort_item() uniq_item() limit_item() normalize()

2006/03/09 (0.07)
    * correct RSS/RDF/Atom file's format

2006/02/27 (0.05)
    * add methods: set() get()

2006/02/24 (0.03)
    * first release

# http://www.kawa.net/works/perl/feedpp/feedpp-e.html (English)
# http://www.kawa.net/works/perl/feedpp/feedpp.html#changes (Japanese)