@@ -5,19 +5,21 @@ Changes
 MANIFEST
 META.yml
 make-dist.sh
+t/clear_item.t
 t/atom.t
+t/image_atom.t
 t/clone_item.t
-t/datetime.t
-t/encoding.t
-t/image.t
-t/invalid_pubdate.t
-t/media.t
-t/multi_category.t
-t/new.t
-t/rdf.t
 t/remove_item.t
-t/round.t
-t/rss.t
-t/setget.t
+t/rdf.t
+t/multi_category.t
+t/invalid_pubdate.t
 t/sort_item.t
+t/image.t
+t/datetime.t
+t/media.t
 t/xmlns.t
+t/setget.t
+t/rss.t
+t/encoding.t
+t/new.t
+t/round.t
